feat(quirks): Integrate AutoModernCPUQuirks for automated CPU support
This PR introduces the ModernCPUQuirks module and integrates it into the Clover boot flow.

**Key Features:**
*   **Auto-Detection:** Automatically detects Intel (12th-14th Gen) and AMD (Zen3-Zen5) processors.
*   **Intelligent Recommendations:** Recommends appropriate OpenCore kernel quirks based on the detected CPU.
*   **Non-Intrusive:** Respects user-defined settings in `config.plist`. If a user manually sets a quirk, that setting takes precedence.
*   **New Config Option:** Adds `AutoModernCPUQuirks` to `config.plist` (default: false).

**Integration Details:**
*   **Module:** Added `rEFIt_UEFI/Platform/Experimental/ModernCPUQuirks.{c,h}`.
*   **Settings:** Updated `Config_Quirks.h` and `Settings.h` to support the new boolean option.
*   **Boot Flow:** Modified `main.cpp` to call the detection logic before `OcLoadKernelSupport`.
*   **Documentation:** updated `config-sample.plist`.

**Build Requirement:**
Requires compiling with `-DENABLE_MODERN_CPU_QUIRKS` to enable the functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,10 @@ DEBUG_REPORT.md
 CloverPackage/*.log
 build_failure.log
 buildme_run.log
+
+# Local directories - DO NOT COMMIT
+Analysis_CloverV2/
+.bin/
+
+# Build logs
+my_build_log*.txt
