--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -751,8 +751,6 @@
             <true/>
             <key>AppleRTC</key>
             <false/>
-            <key>BlockSkywalk</key>
-            <false/>
             <key>BootPatches</key>
             <array>
                 <dict>
@@ -785,6 +783,29 @@
             <false/>
             <key>KernelPm</key>
             <false/>
+            <key>KextsToBlock</key>
+            <array>
+                <dict>
+                    <key>Comment</key>
+                    <string>Allow IOSkywalk Downgrade</string>
+                    <key>Disabled</key>
+                    <false/>
+                    <key>MatchOS</key>
+                    <string>14.x,15.x,26.x</string>
+                    <key>Name</key>
+                    <string>com.apple.iokit.IOSkywalkFamily</string>
+                </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string>Allow Block AppleEthernetRL</string>
+                    <key>Disabled</key>
+                    <true/>
+                    <key>MatchOS</key>
+                    <string>25.x,26.x</string>
+                    <key>Name</key>
+                    <string>com.apple.driver.AppleEthernetRL</string>
+                </dict>
+            </array>
             <key>KernelToPatch</key>
             <array>
                 <dict>
