--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,10 @@ jobs:
 
       - name: Manage Version
         run: |
-          git fetch --prune --unshallow --tags --no-recurse-submodules
-          echo "CUR_TAG=$(git tag -l | tail -1)" >> $GITHUB_ENV
+          git fetch --tags --force
+          CUR_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          echo "Detected version: $CUR_TAG"
+          echo "CUR_TAG=$CUR_TAG" >> $GITHUB_ENV
           echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Install Dependencies
